# hhg

./: .env.local.example  .gitignore  DEVPOST.md  HONK_OTP_PRD.md  PRD.md  README.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/goose-bets/: Cargo.toml
anchor/programs/goose-bets/src/: lib.rs
anchor/tests/: goose-bets.ts
data/: rounds.json
scripts/: generate-videos.js
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/api/bets/: route.ts
src/app/api/honk-auth/challenge/: route.ts
src/app/api/honk-auth/verify/: route.ts
src/app/api/leaderboard/: route.ts
src/app/api/rounds/: route.ts
src/app/api/rounds/[id]/: route.ts
src/app/api/rounds/[id]/resolve/: route.ts
src/app/api/rounds/current/: route.ts
src/app/api/state/: route.ts
src/app/api/stats/: route.ts
src/app/arena/: page.tsx
src/components/: BetFeed.tsx  BettingPanel.tsx  CountdownTimer.tsx  GooseArena.tsx  HonkAuthPrompt.tsx  HonkAuthProvider.tsx  HonkEnrollment.tsx  HonkOtpFlow.tsx  HonkTierBadge.tsx  LandingHero.tsx  Leaderboard.tsx  RevealSequence.tsx  VFormationAnimation.tsx  VideoPlayer.tsx  WalletConnect.tsx  WalletProvider.tsx
src/hooks/: useBetting.ts  useGameState.ts  useHonkVerificationSiteMute.ts
src/lib/: api.ts  audio-context.ts  elevenlabs-seed-honk.ts  game-state.ts  honk-capture.ts  honk-dsp.ts  honk-metrics.ts  honk-otp-verify.ts  honk-types.ts  pcm-audio.ts  rounds.ts  seed-honk.ts  solana.ts
