[package]
name = "goose-bets"
version = "0.1.0"
description = "Goose Bets - Degenerate waterfowl gambling on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goose_bets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
